# PAOO

cmake/: Cmake.docx:Zone.Identifier
cmake/01/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
cmake/02/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
cmake/myfolder/: CMakeCache.txt  Makefile  cmake_install.cmake  salut
tema1/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  tema1
tema1/src/Inventory/: CMakeLists.txt  Inventory.cpp  Inventory.h  Makefile  cmake_install.cmake
tema1/src/Item/: CMakeLists.txt  Item.cpp  Item.h  Makefile  cmake_install.cmake
tema1/src/Order/: CMakeLists.txt  Makefile  Order.cpp  Order.h  cmake_install.cmake
tema1/src/Product/: CMakeLists.txt  Makefile  Product.cpp  Product.h  cmake_install.cmake
